Fix AI suggestions: correct Vercel entry point and fix backend plumbing

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/api/vercel.py"
+            "destination": "/api/index.py"
         }
     ]
 }
